gcc/testsuite/rust.test/fail_compilation/static_var1.rs
static x = 3;

fn main() {
    let y = x +1;
}
